[tool.poetry]
name = "xit.books"
version = "0.1.0"
description = "Documentation manager based on 'Sphinx' and some extensions."
authors = ["Medardo Antonio Rodriguez"]
readme = "README.rst"
packages = [{include = "xit"}]
license = "GPL-3.0-or-later"
repository = "https://github.com/med-merchise/xit.books"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
    "Topic :: Documentation",
    "Topic :: Text Processing",
]

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^5.3.0"
xit = {path = "../xit", develop = true}    # See README file
sphinx-autodoc-annotation = "^1.0.post1"
matplotlib = {version = "^3.6.1", optional = true}
myst-nb = {version = "^0.17.1", optional = true}
jupytext = {version = "^1.14.1", optional = true}
numpydoc = {version = "^1.5.0", optional = true}
pydata-sphinx-theme = {version = "^0.11.0", optional = true}
sphinx-rtd-theme = {version = "^1.0.0", optional = true}
sphinx-issues = {version = "^3.0.1", optional = true}
jupyterlab = {version = "^3.5.0", optional = true}
jupyterlab-code-formatter = {version = "^1.5.3", optional = true}

[tool.poetry.extras]
docs = [
    "sphinx-rtd-theme",
]
notebooks = [
    "matplotlib",
    "myst-nb",
    "jupytext",
    "jupyterlab",
    "jupyterlab-code-formatter",
]
data = [
    "matplotlib",
    "numpydoc",
    "pydata-sphinx-theme",
    "jupyterlab",
    "jupyterlab-code-formatter",
]
devops = [
    "sphinx-issues",
]
all = [
    # docs
    "sphinx-rtd-theme",
    # data & notebooks
    "matplotlib",
    "jupyterlab",
    "jupyterlab-code-formatter",
    # notebooks
    "myst-nb",
    "jupytext",
    # data
    "numpydoc",
    "pydata-sphinx-theme",
    # devops
    "sphinx-issues",
]


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
flake8-bugbear = "^22.9.23"
black = "^22.10.0"
isort = "^5.10.1"
pylint = "^2.15.4"
mypy = "^0.982"
debugpy = "^1.6.3"
ipython = "^8.6.0"
ipdb = "^0.13.9"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
tox = "^3.26.0"
hypothesis = "^6.56.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
    /(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | docs
  )/
  '''

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["xit", "tests"]
skip_gitignore = true

[tool.mypy]
ignore_missing_imports = true
